# resqu

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/ workflows/: publish.yml
src/resqu/: __init__.py  __main__.py  api.py  utils.py
src/resqu.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
