[metadata]
name = resqu
version = 1.0.0
author = segv7f
description = Fast API response fetcher and saver
long_description_content_type = text/markdown
url = https://github.com/segv7f/resqu
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    requests>=2.25.0
    aiohttp>=3.8.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=6.0
    pytest-asyncio>=0.15.0
    black>=21.0
    isort>=5.0